<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_crear" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_eliminiar" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_creditos" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_modificar" />
            <item
                android:id="@+id/nav_read"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_listar" />
        </menu>
    </item>

</menu>
