<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aortizg.zoo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_create"
        android:name="com.aortizg.zoo.ui.create.CreateFragment"
        android:label="@string/menu_crear"
        tools:layout="@layout/fragment_crear" />

    <fragment
        android:id="@+id/nav_delete"
        android:name="com.aortizg.zoo.ui.delete.DeleteFragment"
        android:label="@string/menu_eliminiar"
        tools:layout="@layout/fragment_delete" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.aortizg.zoo.ui.about.AboutFragment"
        android:label="@string/menu_creditos"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_update"
        android:name="com.aortizg.zoo.ui.update.UpdateFragment"
        android:label="@string/menu_modificar"
        tools:layout="@layout/fragment_update" />

    <fragment
        android:id="@+id/nav_read"
        android:name="com.aortizg.zoo.ui.read.ReadFragment"
        android:label="@string/menu_listar"
        tools:layout="@layout/fragment_read" />
</navigation>