<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/text_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:columnCount="4">

                <EditText
                    android:id="@+id/buscar_mod_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Ingresa ID"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:padding="10dp"
                    android:inputType="number" />

                <Button
                    android:id="@+id/u_btn_buscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:text="Buscar"/>

            </GridLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/modificar_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_precio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/modificar_precio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_descuento">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/modificar_descuento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/s_cantidad">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/modificar_cantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/texto"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="¿El producto es perecedero?" />

            <Switch
                android:id="@+id/modificar_perecedero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="No"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/modificar_fecha"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:textSize="20dp"
                android:text="@string/s_fecha_e" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/modificar_limpiar"
                    android:text="@string/s_limpiar"
                    android:layout_columnSpan="2"
                    android:padding="15dp">
                </Button>

                <Button
                    android:id="@+id/u_btn_modificar"
                    android:text="@string/s_modificar"
                    android:padding="15dp">
                </Button>


            </GridLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>